croatia-argocd-main@971e9064a0f/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: argocd
    istio-injection: disabled
  name: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
